# botte-monorepo

./: .pre-commit-config.yaml  README.md
libs/: README.md
libs/botte-dynamodb-tasks/: README.md  pyproject.toml
libs/botte-dynamodb-tasks/botte_dynamodb_tasks/: __init__.py  botte_message_dynamodb_task.py  exceptions.py
libs/botte-dynamodb-tasks/tests/: test_botte_message_dynamodb_task.py
libs/public-clients/botte-dynamodb-client/: README.md  pyproject.toml
libs/public-clients/botte-dynamodb-client/botte_dynamodb_client/: __init__.py  dynamodb_client.py
libs/public-clients/botte-dynamodb-client/tests/: conftest.py  test_dynamodb_client.py
libs/public-clients/botte-dynamodb-client/tests/cassettes/test_dynamodb_client/: TestSendMessage.test_fifo.yaml  TestSendMessage.test_fifo_group_id.yaml  TestSendMessage.test_happy_flow.yaml  TestSendMessage.test_wrong_table_name.yaml
libs/public-clients/botte-http-client/: README.md  pyproject.toml
libs/public-clients/botte-http-client/botte_http_client/: __init__.py  http_client.py
libs/public-clients/botte-http-client/tests/: conftest.py  test_http_client.py
libs/public-clients/botte-http-client/tests/cassettes/test_http_client/: TestBotteHttpClient.test_auth_error.yaml  TestBotteHttpClient.test_param_api_auth_token_not_found_in_param_store.yaml  TestIntrospection.test_health.yaml  TestIntrospection.test_unhealth.yaml  TestIntrospection.test_version.yaml  TestSendMessage.test_auth_error.yaml  TestSendMessage.test_base_url_error.yaml  TestSendMessage.test_happy_flow.yaml
libs/public-clients/botte-lambda-client/: README.md  pyproject.toml
libs/public-clients/botte-lambda-client/botte_lambda_client/: __init__.py  lambda_client.py
libs/public-clients/botte-lambda-client/tests/: conftest.py  test_lambda_client.py
libs/public-clients/botte-lambda-client/tests/cassettes/test_lambda_client/: TestBotteLambdaClient.test_async.yaml  TestBotteLambdaClient.test_happy_flow.yaml  TestBotteLambdaClient.test_lambda_name_error.yaml
projects/: README.md
projects/botte-be/: Makefile  README.md  TODO.md  pyproject.toml  serverless.yml
projects/botte-be/botte_be/conf/: __init__.py  settings.py  settings_module.py
projects/botte-be/botte_be/scripts/: telegram_webhook_cli.py
projects/botte-be/botte_be/views/: authorizer_view.py  dynamodb_message_view.py  endpoint_introspection_view.py  endpoint_message_view.py  endpoint_webhook_view.py  message_view.py  views_utils.py
projects/botte-be/tests/: conftest.py
projects/botte-be/tests/conf/: test_settings.py
projects/botte-be/tests/views/: test_authorizer_view.py  test_dynamodb_message_view.py  test_endpoint_introspection_view.py  test_endpoint_message_view.py  test_endpoint_webhook_view.py  test_message_view.py
projects/botte-be/tests/views/cassettes/test_dynamodb_message_view/: TestDynamodbMessageView.test_fifo.yaml  TestDynamodbMessageView.test_fifo_group_id.yaml  TestDynamodbMessageView.test_happy_flow.yaml
projects/botte-be/tests/views/cassettes/test_endpoint_message_view/: TestEndpointMessageView.test_authorization_redacted.yaml  TestEndpointMessageView.test_happy_flow.yaml
projects/botte-be/tests/views/cassettes/test_endpoint_webhook_view/: TestEndpointWebhookView.test_authorization_redacted.yaml  TestEndpointWebhookView.test_echo.yaml  TestEndpointWebhookView.test_shared_link.yaml  TestEndpointWebhookView.test_unknown_chat_id.yaml
projects/botte-be/tests/views/cassettes/test_message_view/: TestMessageView.test_happy_flow.yaml
projects/botte-be/tests_e2e/: conftest.py  test_e2e_dynamodb_message.py  test_e2e_endpoint_introspection.py  test_e2e_endpoint_message.py  test_e2e_lambda_invok_message.py
